# des

./: Makefile  README.md  pyproject.toml  requirements.build.txt  requirements.dev.txt
src/des/: __init__.py  algorithm.py
tests/: conftest.py
tests/fixtures/: hamlet.py
tests/unit/des/: test_algorithm.py
