[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "des"
version = "0.0.1"
authors = [
  { name="Dylan Randall", email="dylan.d.randall@gmail.com" },
]
description = "Implementation of the Distinct Elements in Stream algorithm."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HOWZ1T/des"
Issues = "https://github.com/HOWZ1T/des/issues"

[tool.isort]
profile = "black"